tests/errors/builtin-not-top-level/main.pa
# `built-in` may only be a top-level def`s right-hand side.
def main = fun {
	let x = built-in "io.print"
	x
}
